# Job-App-Tracker

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package.json  render.yaml
backend/: Dockerfile  Dockerfile.prod  alembic.ini  package.json  pyproject.toml  tsconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 1e7765b5b85c_initial.py  6bae0d65624d_initial.py  a24398e5d6d6_add_email_classification_fields.py  e4edb434b899_add_email_client_fields.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  application.py  contact.py  email_account.py  email_message.py  refresh_token.py  timeline_event.py  user.py
backend/app/routers/: analytics.py  applications.py  auth.py  board.py  contacts.py  emails.py  timeline.py
backend/app/schemas/: analytics.py  application.py  auth.py  contact.py  email.py  timeline.py
backend/app/services/: analytics_service.py  application_service.py  auth_service.py  contact_service.py  email_parser.py  encryption.py  gmail_service.py  interview_extractor.py  llm_classifier.py  timeline_service.py
backend/app/utils/: gmail_queries.py  jwt.py
backend/prisma/: schema.prisma  seed.ts
backend/src/: app.ts  index.ts
backend/src/config/: index.ts
backend/src/lib/: encryption.ts  google.ts  prisma.ts
backend/src/middleware/: authenticate.ts  errorHandler.ts  rateLimiter.ts  requestLogger.ts  validate.ts
backend/tests/: test_email_parser.py  test_encryption.py  test_gmail_queries.py  test_jwt.py
(+93 files in other folders)
